--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "xchat"
+name = "tipping_profiles"
 version = "0.1.0"
+authors = ["BookChain Developer"]
 edition = "2021"
+description = "A smart contract for decentralized resource booking on XION blockchain"
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -30,19 +32,23 @@ backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
-
+[package.metadata.scripts]
+optimize = """docker run --rm -v "$(pwd)":/code \
+  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
+  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
+  cosmwasm/optimizer:0.16.0
+"""
 
 [dependencies]
-cosmwasm-schema = "1.5.11"
-cosmwasm-std = "1.5.11"
-cosmwasm-storage = "1.5.2"
-cw-storage-plus = "1.2.0"
-cw2 = "1.1.2"
-schemars = "0.8.22"
-serde = { version = "1.0.219", default-features = false, features = ["derive"] }
-thiserror = "1.0.69"
-
-
+cosmwasm-schema = "1.5.0"
+cosmwasm-std = "1.5.0"
+cosmwasm-storage = "1.3.1"
+cw-storage-plus = "1.1.0"
+cw2 = "1.1.0"
+schemars = "0.8.12"
+serde = { version = "1.0.183", default-features = false, features = ["derive"] }
+thiserror = "1.0.50"
+regex = "1.10.2"
 
 [dev-dependencies]
 cw-multi-test = "0.17.0"
